# COMBiler

./: CMakeLists.txt  LICENSE  README.md
assets/soundfonts/: gm_bank.README.md
documents/: chromesthesia.rgs  command_prompts.rgl  constants_manager.rgl  iconset.rgi  info_window.rgl  instrument_prompt.rgl  mockup_v1.rgl  mockup_v2.rgl  project_settings.rgl
licenses/: LICENSE-raygui.txt  LICENSE-tinyfiledialogs.txt
sources/: aliases.hpp  buttons.cpp  constants.hpp  debug_utilities.hpp  handle_events.cpp  main.cpp  main_window.cpp  main_window.hpp  shell.html  system_states.hpp  utilities.cpp
sources/action_center/: action_center.cpp  action_center.hpp  command_actions.cpp  constants_actions.cpp  note_actions.cpp  page_actions.cpp  utilities.cpp
sources/actions/: add_notes.hpp  base_action.hpp
sources/canvas_manager/: canvas_manager.cpp  canvas_manager.hpp  command_tools.cpp  note_tools.cpp  page_tools.cpp  utilities.cpp
sources/command/: command_palette.cpp  command_palette.hpp  command_type.hpp
sources/constants/: action_center.hpp  application_window.hpp  enumerator.hpp  instruments.hpp  interface_layout.hpp  midi.hpp  note_canvas.hpp  playback.hpp  project_data.hpp  prompts.hpp  serializer.hpp  sidebar.hpp  toolbar.hpp
sources/enumerator/: actions.cpp  draw.cpp  draw_helpers.cpp  enumerator.cpp  enumerator.hpp  pdf_canvas.cpp  pdf_canvas.hpp  pdf_document.cpp  pdf_document.hpp  utilities.cpp
sources/interface/: anchors.hpp  interface.hpp  utilities.hpp
sources/interface/navigation_bar/: labels.hpp  layout.hpp  navigation_bar.cpp  navigation_bar.hpp  per_page_settings.cpp  status.cpp  timeline.cpp  transport_controls.cpp
sources/interface/note_canvas/: canvas.cpp  commands.cpp  draw_helpers.cpp  grid.cpp  labels.hpp  layout.hpp  note_canvas.cpp  note_canvas.hpp  notes.cpp  paste_ghost.cpp  playhead.cpp  selection.cpp  utilities.cpp  zoom.cpp
sources/interface/prompts/: actions.cpp  constants_prompts.cpp  labels.hpp  prompts.cpp  prompts.hpp  utilities.cpp
sources/interface/sidebar/: inspector.cpp  labels.hpp  layout.hpp  sidebar.cpp  sidebar.hpp
sources/interface/toolbar/: labels.hpp  layout.hpp  option.cpp  state_control.cpp  system_action.cpp  tool_palette.cpp  toolbar.cpp  toolbar.hpp
sources/midi_manager/: midi_manager.cpp  midi_manager.hpp  utilities.cpp
sources/playback_manager/: actions.cpp  note_state_machine.cpp  playback_manager.cpp  playback_manager.hpp  utilities.cpp
sources/program_states/: context.hpp  interface.hpp  layout.hpp  machine.hpp  project_data.hpp  system.hpp
sources/resources/icons/: iconset.h
sources/resources/styles/: chromesthesia.h
sources/serializer/: export.cpp  import.cpp  serializer.cpp  serializer.hpp
sources/timeline_manager/: preview_texture.cpp  preview_texture.hpp  timeline_manager.cpp  timeline_manager.hpp
sources/utilities/: enum_set.hpp  project_utilities.hpp  static_set.hpp
